--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Exceptional Realty Group - Luxury Homes - About</title>
+  <title>Exceptional Realty Group - Luxury Homes - About</title>
+  <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header>
